--- a/.github/jobs/test_install_win32.yml
+++ b/.github/jobs/test_install_win32.yml
@@ -20,7 +20,7 @@ jobs:
           vmImage: ${{parameters.vmImage}}
 
       - script: |
-          cmake -G "Visual Studio 17 2022" -B build/Win32 -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_NATIVE_BUILD_APPS=OFF -D BABYLON_DEBUG_TRACE=ON
+          cmake -B build -G "Visual Studio 17 2022" -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_NATIVE_BUILD_APPS=OFF -D BABYLON_DEBUG_TRACE=ON
         displayName: "Configure"
 
       - script: |
