--- a/.github/jobs/test_install_linux.yml
+++ b/.github/jobs/test_install_linux.yml
@@ -26,13 +26,13 @@ jobs:
         displayName: "Install packages"
 
       - script: |
-          cmake -B build -G Ninja -D CMAKE_BUILD_TYPE=RelWithDebInfo -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_NATIVE_BUILD_APPS=OFF -D BABYLON_DEBUG_TRACE=ON
+          cmake -B build/Linux -G Ninja -D CMAKE_BUILD_TYPE=RelWithDebInfo -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_NATIVE_BUILD_APPS=OFF -D BABYLON_DEBUG_TRACE=ON
         displayName: "Configure"
 
       - script: |
-          cmake --build build --config RelWithDebInfo
+          cmake --build build/Linux --config RelWithDebInfo
         displayName: "Build"
 
       - script: |
-          cmake --install build --prefix=build/Install --config=RelWithDebInfo
+          cmake --install build/Linux --prefix=build/Linux/Install --config=RelWithDebInfo
         displayName: "Install"
