--- a/.github/jobs/test_install_win32.yml
+++ b/.github/jobs/test_install_win32.yml
@@ -20,18 +20,18 @@ jobs:
           vmImage: ${{parameters.vmImage}}
 
       - script: |
-          cmake -B build -G "Visual Studio 17 2022" -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_NATIVE_BUILD_APPS=OFF -D BABYLON_DEBUG_TRACE=ON
+          cmake -B build/Win32 -G "Visual Studio 17 2022" -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_NATIVE_BUILD_APPS=OFF -D BABYLON_DEBUG_TRACE=ON
         displayName: "Configure"
 
       - script: |
-          cmake --build build --config RelWithDebInfo
+          cmake --build build/Win32 --config RelWithDebInfo
         displayName: "Build"
 
       - script: |
-          cmake --install build --prefix=build/Install --config RelWithDebInfo
+          cmake --install build/Win32 --prefix=build/Win32/Install --config RelWithDebInfo
         displayName: "Install"
 
       - script: |
-          cmake Install/Test -B build/Install/Test -D INSTALL_DIR=$(Build.SourcesDirectory)/build/Win32/Install
-          cmake --build build/Install/Test --config RelWithDebInfo
-        displayName: "Install Test"
+          cmake Install/Test -B build/TestInstall -D INSTALL_DIR=$(Build.SourcesDirectory)/build/Win32/Install
+          cmake --build build/TestInstall --config RelWithDebInfo
+        displayName: "Test Install"
