--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -98,7 +98,7 @@ set(ENABLE_HLSL OFF)
 set(ENABLE_OPT OFF)
 set(ENABLE_CTEST OFF)
 set(SKIP_GLSLANG_INSTALL ON)
-set(ENABLE_GLSLANG_WEBMIN OFF)
+set(ENABLE_GLSLANG_WEBMIN ON)
 set(ENABLE_GLSLANG_WEBMIN_DEVEL OFF)
 
 if(NOT TARGET glslang)
@@ -158,7 +158,7 @@ set(SPIRV_CROSS_ENABLE_REFLECT OFF)
 set(SPIRV_CROSS_ENABLE_C_API OFF)
 set(SPIRV_CROSS_ENABLE_UTIL OFF)
 set(SPIRV_CROSS_SKIP_INSTALL ON)
-set(SPIRV_CROSS_ENABLE_WEBMIN OFF)
+set(SPIRV_CROSS_ENABLE_WEBMIN ON)
 if(NOT GRAPHICS_API STREQUAL "OpenGL")
     set(SPIRV_CROSS_ENABLE_GLSL OFF)
 endif()
