Factor out shader cache and shader compiler into their own plugins

--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -137,6 +137,7 @@ target_link_libraries(Playground
     PRIVATE NativeInput
     PRIVATE NativeOptimizations
     PRIVATE NativeTracing
+    PRIVATE ShaderCache
     PRIVATE ScriptLoader
     PRIVATE TestUtils
     PRIVATE Window
