Add shader tool + code cleanup

--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -42,6 +42,14 @@ if(BABYLON_NATIVE_PLUGIN_SHADERCOMPILER)
     add_subdirectory(ShaderCompiler)
 endif()
 
+if(BABYLON_NATIVE_PLUGIN_SHADERTOOL)
+    if(BABYLON_NATIVE_PLUGIN_SHADERCACHE AND BABYLON_NATIVE_PLUGIN_SHADERCOMPILER)
+        add_subdirectory(ShaderTool)
+    else()
+        message(WARNING "ShaderTool requires both ShaderCache and ShaderCompiler plugins to be enabled.")
+    endif()
+endif()
+
 if(BABYLON_NATIVE_PLUGIN_TESTUTILS)
     add_subdirectory(TestUtils)
 endif()
